# flakes

./: flake.nix
python-lib/: flake.nix  pyproject.toml
rust-bin/: Cargo.toml
rust-lib/: flake.nix
rust-lib/src/: lib.rs
