[tool.poetry]
# TODO: Update name and description
name = "python-lib"
version = "0.1.0"
description = "A Python library"
authors = ["insertdead <mdsc0111@tuta.io>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
